Solve the problem of align-end

--- a/Frontend/src/components/ImageSection.css
+++ b/Frontend/src/components/ImageSection.css
@@ -22,6 +22,7 @@ video {
 }
 .image-inner-container {
   padding: 20px;
+  width: 100%;
 }
 
 .image-header {
